[package]
name = "paillier"
version = "0.3.10"
edition = "2018"

[dependencies]
#rayon = "1.1"
serde = { version = "1.0", git ="https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
curv = {  git = "https://github.com/sgx-test/curv-sgx", version = "0.7", branch = "0.7.0-nosecp-sgx-gmp", features = ["rust-gmp"] }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" , optional = true }
#git = "https://github.com/sgx-test/curv-sgx"

#[dev-dependencies]
#bencher = "0.1"
#serde_json = "1.0"
#rand = "0.6"

[features]
default = ["curv/rust-gmp","mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

[[bench]]
name = "arith"
harness = false

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "keygen"
harness = false

[[bench]]
name = "proof"
harness = false

[[example]]
name = "basic"

[[example]]
name = "core"

[[example]]
name = "packed"

[[example]]
name = "simple-voting"
