[package]
name = "paillier"
version = "0.3.10"
edition = "2018"

[dependencies]
rayon = "1.1"
serde = { version = "1.0", features = ["derive"] }
curv = { git = "https://github.com/sgx-test/curv-sgx", branch = "0.7.0-generic-update", version = "0.7", default-features = false}

[dev-dependencies]
bencher = "0.1"
serde_json = "1.0"
rand = "0.6"

[features]
default = ["curv/rust-gmp-kzen"]
parallel = []
wasm = ["curv/big-num"]

[[bench]]
name = "arith"
harness = false

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "keygen"
harness = false

[[bench]]
name = "proof"
harness = false

[[example]]
name = "basic"

[[example]]
name = "core"

[[example]]
name = "packed"

[[example]]
name = "simple-voting"
